--- a/public/index.html
+++ b/public/index.html
@@ -475,7 +475,8 @@
                             <input type="email" class="form-control" id="signInEmail" required>
                             <div class="form-text">Enter your registered email address</div>
                         </div>
-                        <div class="mt-4 text-center">
+                        <button type="submit" class="btn btn-primary w-100 mb-3">Sign In</button>
+                        <div class="text-center">
                             <button type="button" class="btn btn-outline-primary" id="backToSignUp">Create Account</button>
                         </div>
                     `;
