--- a/public/index.html
+++ b/public/index.html
@@ -475,10 +475,9 @@
                             <input type="email" class="form-control" id="signInEmail" required>
                             <div class="form-text">Enter your registered email address</div>
                         </div>
-                        <div class="text-center mb-3">
+                        <div class="text-center">
                             <button type="button" class="btn btn-outline-primary" id="backToSignUp">Create Account</button>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Sign In</button>
                     `;
                     
                     // Replace the create account form with sign in form
