--- a/public/index.html
+++ b/public/index.html
@@ -476,9 +476,7 @@
                             <div class="form-text">Enter your registered email address</div>
                         </div>
                         <button type="submit" class="btn btn-primary w-100 mb-3">Sign In</button>
-                        <div class="text-center">
-                            <button type="button" class="btn btn-outline-primary" id="backToSignUp">Create Player</button>
-                        </div>
+                        <button type="button" class="btn btn-outline-primary w-100" id="backToSignUp">Create Player</button>
                     `;
                     
                     // Replace the create account form with sign in form
