--- a/public/index.html
+++ b/public/index.html
@@ -314,7 +314,7 @@
             font-weight: 600;
             transition: var(--transition);
             font-size: 0.95rem;
-            width: auto;
+            width: 200px;
             min-width: 120px;
         }
 
@@ -475,7 +475,9 @@
                             <input type="email" class="form-control" id="signInEmail" required>
                             <div class="form-text">Enter your registered email address</div>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100 mb-3">Sign In</button>
+                        <div class="text-center mb-3">
+                            <button type="submit" class="btn btn-primary">Sign In</button>
+                        </div>
                         <div class="text-center">
                             <button type="button" class="btn btn-outline-primary" id="backToSignUp">Create Player</button>
                         </div>
