--- a/public/index.html
+++ b/public/index.html
@@ -475,10 +475,10 @@
                             <input type="email" class="form-control" id="signInEmail" required>
                             <div class="form-text">Enter your registered email address</div>
                         </div>
-                        <div class="mb-3">
+                        <div class="text-center">
                             <button type="submit" class="btn btn-primary w-100">Sign In</button>
                         </div>
-                        <div class="text-center">
+                        <div class="text-center mt-3">
                             <button type="button" class="btn btn-outline-primary" id="backToSignUp">Create Player</button>
                         </div>
                     `;
