--- a/public/index.html
+++ b/public/index.html
@@ -561,8 +561,7 @@
 
                             if (response.ok && data) {
                                 console.log('Sign-in successful');
-                                alert('Welcome back, ' + data.name + '!');
-                                // Here you would typically redirect to the dashboard or home page
+                                window.location.href = '/profile';
                             } else {
                                 console.log('GameLayer account not found, signing out from Firebase');
                                 // If GameLayer account doesn't exist, sign out from Firebase
