--- a/public/profile.html
+++ b/public/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="Logo_Red.png">
     <link rel="shortcut icon" type="image/png" href="Logo_Red.png">
-    <title>GameLayer Player Profile</title>
+    <title>Player Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <script type="module">
@@ -84,145 +84,60 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'SF Pro Text', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-            line-height: 1.6;
-            color: var(--text-primary);
-            background: linear-gradient(135deg, #6366F1 0%, #4F46E5 100%);
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: #f8f9fa;
             padding: 2rem;
         }
-
-        .container {
-            max-width: 800px;
-            width: 100%;
+        .profile-card {
+            max-width: 600px;
             margin: 0 auto;
-        }
-
-        .card {
-            border: none;
-            border-radius: var(--border-radius);
-            background-color: var(--card-bg);
-            backdrop-filter: blur(20px);
-            -webkit-backdrop-filter: blur(20px);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-            transition: var(--transition);
-            width: 100%;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
-        }
-
-        .card-header {
-            background: rgba(0, 0, 0, 0.05);
-            border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-            padding: 1.5rem;
-            text-align: center;
-        }
-
-        .card-header h1 {
-            color: var(--text-primary);
-            font-weight: 700;
-            margin: 0;
-            font-size: 1.5rem;
-            letter-spacing: -0.5px;
-            font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, sans-serif;
-        }
-
-        .card-body {
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             padding: 2rem;
         }
-
-        .profile-section {
-            display: flex;
-            align-items: center;
-            gap: 2rem;
+        .profile-header {
+            text-align: center;
             margin-bottom: 2rem;
         }
-
         .profile-avatar {
             width: 150px;
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
-            border: 3px solid var(--primary-color);
-            box-shadow: 0 8px 24px rgba(99, 102, 241, 0.2);
+            margin-bottom: 1rem;
+            border: 3px solid #007bff;
         }
-
-        .profile-info {
-            flex: 1;
-        }
-
         .profile-name {
-            font-size: 1.75rem;
-            font-weight: 700;
-            color: var(--text-primary);
+            font-size: 2rem;
+            font-weight: bold;
             margin-bottom: 0.5rem;
         }
-
         .profile-email {
-            font-size: 1.1rem;
-            color: var(--text-secondary);
+            color: #6c757d;
             margin-bottom: 1rem;
         }
-
         .btn-signout {
-            background-color: var(--accent-color);
+            background-color: #dc3545;
             color: white;
             border: none;
-            padding: 0.75rem 2rem;
-            border-radius: 24px;
-            font-weight: 600;
-            transition: var(--transition);
-            font-size: 0.95rem;
+            padding: 0.5rem 1rem;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
-
         .btn-signout:hover {
-            background-color: #e11d48;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(244, 63, 94, 0.2);
-        }
-
-        @media (max-width: 576px) {
-            .container {
-                max-width: 100%;
-                padding: 0 1rem;
-            }
-            
-            .profile-section {
-                flex-direction: column;
-                text-align: center;
-            }
-            
-            .profile-avatar {
-                width: 120px;
-                height: 120px;
-            }
+            background-color: #c82333;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="card-header">
-                <h1>Player Profile</h1>
-            </div>
-            <div class="card-body">
-                <div class="profile-section">
-                    <img id="playerAvatar" src="https://api.dicebear.com/7.x/avataaars/svg?seed=default" alt="Player Avatar" class="profile-avatar">
-                    <div class="profile-info">
-                        <h2 id="playerName" class="profile-name">Loading...</h2>
-                        <p id="playerEmail" class="profile-email">Loading...</p>
-                        <button onclick="handleSignOut()" class="btn-signout">Sign Out</button>
-                    </div>
-                </div>
-            </div>
+    <div class="profile-card">
+        <div class="profile-header">
+            <img id="playerAvatar" src="https://via.placeholder.com/150" alt="Player Avatar" class="profile-avatar">
+            <h1 id="playerName" class="profile-name">Loading...</h1>
+            <p id="playerEmail" class="profile-email">Loading...</p>
+            <button onclick="handleSignOut()" class="btn-signout">Sign Out</button>
         </div>
     </div>
 
