--- a/public/profile.html
+++ b/public/profile.html
@@ -39,19 +39,15 @@
             if (user) {
                 console.log('User is signed in:', user);
                 try {
-                    // Get player data from GameLayer using Firebase UID
-                    const response = await fetch(`/api/players/${user.uid}`, {
-                        headers: {
-                            'Authorization': `Bearer ${await user.getIdToken()}`
-                        }
-                    });
+                    // Get player data ONLY from GameLayer
+                    const response = await fetch(`/api/players/${user.uid}`);
                     const data = await response.json();
-                    console.log('Player data:', data);
+                    console.log('Player data from GameLayer:', data);
 
                     if (response.ok) {
-                        // Update profile with player data from GameLayer
+                        // Update profile with ONLY GameLayer data
                         document.getElementById('playerName').textContent = data.name || 'Player';
-                        document.getElementById('playerEmail').textContent = user.email;
+                        document.getElementById('playerEmail').textContent = data.email || user.email; // Keep email as fallback
                         document.getElementById('playerPoints').textContent = data.points || '0';
                         document.getElementById('playerCredits').textContent = data.credits || '0';
                         // Use level.name if available, otherwise use level.ordinal
