--- a/public/profile.html
+++ b/public/profile.html
@@ -46,12 +46,16 @@
 
                     if (response.ok) {
                         // Display ONLY GameLayer data
-                        document.getElementById('playerName').textContent = data.name;
-                        document.getElementById('playerEmail').textContent = data.email;
-                        document.getElementById('playerPoints').textContent = data.points;
-                        document.getElementById('playerCredits').textContent = data.credits;
-                        document.getElementById('playerLevel').textContent = data.level.name || data.level.ordinal;
-                        document.getElementById('playerAvatar').src = data.imgUrl;
+                        document.getElementById('playerName').textContent = data.name || 'Player';
+                        document.getElementById('playerEmail').textContent = data.email || 'No email';
+                        document.getElementById('playerPoints').textContent = data.points || '0';
+                        document.getElementById('playerCredits').textContent = data.credits || '0';
+                        // Safely handle level data
+                        const levelDisplay = data.level ? (data.level.name || data.level.ordinal || '1') : '1';
+                        document.getElementById('playerLevel').textContent = levelDisplay;
+                        if (data.imgUrl) {
+                            document.getElementById('playerAvatar').src = data.imgUrl;
+                        }
                     } else {
                         throw new Error(data.error || 'Failed to fetch player data from GameLayer');
                     }
