--- a/public/profile.html
+++ b/public/profile.html
@@ -37,25 +37,21 @@
         // Check authentication state
         onAuthStateChanged(auth, async (user) => {
             if (user) {
-                console.log('User authenticated with Firebase:', user.uid);
+                console.log('User authenticated with Firebase, UID:', user.uid);
                 try {
-                    // Get ALL player data from GameLayer API
+                    // Use Firebase UID as player-id to fetch from GameLayer
                     const response = await fetch(`/api/players/${user.uid}`);
                     const data = await response.json();
                     console.log('GameLayer player data:', data);
 
                     if (response.ok) {
-                        // Display ONLY GameLayer data
-                        document.getElementById('playerName').textContent = data.name || 'Player';
-                        document.getElementById('playerEmail').textContent = data.email || 'No email';
-                        document.getElementById('playerPoints').textContent = data.points || '0';
-                        document.getElementById('playerCredits').textContent = data.credits || '0';
-                        // Safely handle level data
-                        const levelDisplay = data.level ? (data.level.name || data.level.ordinal || '1') : '1';
-                        document.getElementById('playerLevel').textContent = levelDisplay;
-                        if (data.imgUrl) {
-                            document.getElementById('playerAvatar').src = data.imgUrl;
-                        }
+                        // Display GameLayer player data
+                        document.getElementById('playerName').textContent = data.name;
+                        document.getElementById('playerEmail').textContent = data.email;
+                        document.getElementById('playerPoints').textContent = data.points;
+                        document.getElementById('playerCredits').textContent = data.credits;
+                        document.getElementById('playerLevel').textContent = data.level.name || data.level.ordinal;
+                        document.getElementById('playerAvatar').src = data.imgUrl;
                     } else {
                         throw new Error(data.error || 'Failed to fetch player data from GameLayer');
                     }
