--- a/public/profile.html
+++ b/public/profile.html
@@ -50,8 +50,13 @@
                         document.getElementById('playerEmail').textContent = data.email;
                         document.getElementById('playerPoints').textContent = data.points;
                         document.getElementById('playerCredits').textContent = data.credits;
-                        document.getElementById('playerLevel').textContent = data.level.name || data.level.ordinal;
-                        document.getElementById('playerAvatar').src = data.imgUrl;
+                        // Handle empty level data
+                        const levelDisplay = data.level && data.level.name ? data.level.name : 
+                                           data.level && data.level.ordinal ? data.level.ordinal : '1';
+                        document.getElementById('playerLevel').textContent = levelDisplay;
+                        if (data.imgUrl) {
+                            document.getElementById('playerAvatar').src = data.imgUrl;
+                        }
                     } else {
                         throw new Error(data.error || 'Failed to fetch player data from GameLayer');
                     }
